# retropulse

./: LICENSE.txt  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/modern/: page.tsx
app/winamp/: layout.tsx  page.tsx
assets/: hippos.mod
assets/artwork/: app-icon.afdesign  menubar-template.afdesign
components/context/: AppConfig.tsx  PlayerEventBroker.tsx  WinampSkin.tsx
components/tauri/: SizedTauriWindow.tsx
components/ui/: marquee.tsx  seeker.tsx  winamp.tsx
components/ui/winamp/: winamp-button.tsx  winamp-digits.tsx  winamp-marquee.tsx  winamp-slider.tsx  winamp-sprite-text.tsx  winamp-sprite.tsx  winamp-toggle-button.tsx
lib/: utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  openmpt.rs  player.rs  tray.rs  winamp.rs
src-tauri/src/openmpt/: module.rs
