[package]
name = "retropulse"
version = "0.1.0"
description = "A simple menubar mod player"
authors = ["Jakob Westhoff"]
license = "MIT"
repository = "https://github.com/jakobwesthoff/retropulse"
default-run = "retropulse"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = ["dialog-open"] }
libopenmpt-sys = "0.3.0"
cpal = "0.15.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
