[package]
name = "retropulse"
version = "0.1.0"
description = "A simple menubar mod player"
authors = ["Jakob Westhoff"]
license = "MIT"
license-file = "../LICENSE.txt"
repository = "https://github.com/jakobwesthoff/retropulse"
default-run = "retropulse"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2.2.0", features = [
    "macos-private-api",
    "tray-icon",
    "image-png",
] }
libopenmpt-sys = "0.3.0"
cpal = "0.15.2"
tauri-plugin-dialog = "^2.2.0"
uuid = { version = "1.10.0", features = ["v4"] }
anyhow = "1.0.89"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
tauri-plugin-positioner = { version = "^2.0.0", features = ["tray-icon"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
